Fix box size on mobile and add back button on patient education page

--- a/rad_in_ir/src/App.css
+++ b/rad_in_ir/src/App.css
@@ -130,6 +130,22 @@ li.link-wrapper > a.active {
     border-radius: 0px;
 }
 
+.PatientEdBack {
+    color: #bb0000;
+    border-color: #bb0000;
+    padding: 8px;
+    width: 100%;
+    background-color: white;
+    border-radius: 4px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.PatientEdBack:hover {
+    color: white;
+    border-color: #bb0000;
+    background-color: #bb0000;
+}
+
 /*
     Mobile optimization of patient education document pages
 */
@@ -147,6 +163,14 @@ li.link-wrapper > a.active {
 
     #DocumentDisplay {
         max-width: 100% !important;
+    }
+
+    #procedure-image {
+        height: 40% !important;
+    }
+
+    #education-jumbotron {
+        height: 100% !important;
     }
 
 }
